@@ -79,7 +79,7 @@ public abstract class AbstractAnyRepoExt<A extends Any, N extends AbstractAny>
         if (literals.isEmpty()) {
             attrValues.add(attrValue);
         } else {
-            for (String token : attrValue.split(Pattern.quote(literals.get(0)))) {
+            for (String token : attrValue.split(Pattern.quote(literals.getFirst()))) {
                 if (!token.isEmpty()) {
                     attrValues.addAll(split(token, literals.subList(1, literals.size())));
                 }
