@@ -140,8 +140,8 @@ public class DefaultRealmPushResultHandler
 
     private static void reportPropagation(final ProvisioningReport result, final PropagationReporter reporter) {
         if (!reporter.getStatuses().isEmpty()) {
-            result.setStatus(toProvisioningReportStatus(reporter.getStatuses().get(0).getStatus()));
-            result.setMessage(reporter.getStatuses().get(0).getFailureReason());
+            result.setStatus(toProvisioningReportStatus(reporter.getStatuses().getFirst().getStatus()));
+            result.setMessage(reporter.getStatuses().getFirst().getFailureReason());
         }
     }
 
@@ -158,9 +158,9 @@ public class DefaultRealmPushResultHandler
                 propagationManager.createTasks(realm, propByRes, null),
                 beforeAttrs);
         if (!taskInfos.isEmpty()) {
-            taskInfos.get(0).setBeforeObj(Optional.ofNullable(beforeObj));
+            taskInfos.getFirst().setBeforeObj(Optional.ofNullable(beforeObj));
             PropagationReporter reporter = new DefaultPropagationReporter();
-            taskExecutor.execute(taskInfos.get(0), reporter, securityProperties.getAdminUser());
+            taskExecutor.execute(taskInfos.getFirst(), reporter, securityProperties.getAdminUser());
             reportPropagation(result, reporter);
         }
 
@@ -176,9 +176,9 @@ public class DefaultRealmPushResultHandler
 
         List<PropagationTaskInfo> taskInfos = propagationManager.createTasks(realm, propByRes, noPropResources);
         if (!taskInfos.isEmpty()) {
-            taskInfos.get(0).setBeforeObj(Optional.ofNullable(beforeObj));
+            taskInfos.getFirst().setBeforeObj(Optional.ofNullable(beforeObj));
             PropagationReporter reporter = new DefaultPropagationReporter();
-            taskExecutor.execute(taskInfos.get(0), reporter, securityProperties.getAdminUser());
+            taskExecutor.execute(taskInfos.getFirst(), reporter, securityProperties.getAdminUser());
             reportPropagation(result, reporter);
         }
     }
